Fixes bad contrast on CSS selection color (uses link color)

--- a/theme/css/zf-web.css
+++ b/theme/css/zf-web.css
@@ -84,12 +84,12 @@ a:focus {
 ::-moz-selection  {
 	color: #fff;
 	text-shadow:none;
-	background:#0f1419;
+	background:#428bca;
 }
 ::selection {
 	color: #fff;
 	text-shadow:none;
-	background:#0f1419;
+	background:#428bca;
 }
 
 .centered {
